<resources>
    <string name="app_name">Food Order App</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="rupee">\u20B9</string>
    <string name="quantity">Quantity :  </string>
    <string name="add_cart">Add to cart</string>
    <string name="go_cart">View Cart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="clear">Clear Cart</string>
    <string name="order">Place Order</string>
    <string name="empty_cart">Empty Cart</string>
</resources>
