<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10sp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp">

    <RelativeLayout
        android:gravity="center"
        android:background="@drawable/rounded_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:id="@+id/img"
            android:contentDescription="@string/image"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:contentDescription="@string/name"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/rupee"
            android:text="@string/rupee"
            android:layout_toLeftOf="@+id/item_price"
            android:layout_below="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_alignBottom="@id/rupee"
            android:layout_below="@+id/item_name"
            android:layout_width="wrap_content"
            android:contentDescription="@string/price"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>