<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".cart_activity"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_menu_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar22"
            android:orientation="vertical"
            android:weightSum="4">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dp"
                    android:gravity="center"
                    android:text="@string/empty_cart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view2"
                    android:layout_width="match_parent"
                    android:layout_height="550dp"
                    android:scrollbars="vertical" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1">

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/clear"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_background"
                        android:drawableTop="@drawable/ic_remove_shopping_cart_black_24dp"
                        android:padding="40dp"
                        android:text="@string/clear" />

                    <Button
                        android:id="@+id/order"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_background"
                        android:drawableTop="@drawable/ic_arrow_forward_black_24dp"
                        android:padding="40dp"
                        android:text="@string/order" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>